--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,15 @@
 /*Cambio de fondo*/
 
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bitcount+Prop+Double+Ink:wght@100..900&family=Oi&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bitcount+Prop+Double+Ink:wght@100..900&family=Oi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=SUSE:ital,wght@0,100..900;1,100..900&display=swap');
+ */
+/*Cambio de fondo*/
 
 body {
-  background-color: #FAD63E;
-   margin: 0;
+  background-color: #a8dd7c;
+  margin: 0;
   padding: 0;
   height: 100%;
   /*height: auto;
@@ -18,13 +20,11 @@ body {
 }
 
 
-h1 {
-  font-family: "Bungee Static", "Archivo BlackStatic", "SUSE", "roboto", "oi" 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, "Barriecito";
-}
-
-h2 {
+h1,h2,h3 {
+  /*font-family: "Bungee Static", "Archivo BlackStatic", "SUSE", "roboto", "oi" 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, "Barriecito";*/
   font-family: "SUSE","Roboto", "Bungee Static", "oi";
 }
+
 
 h1,
 h2,
@@ -99,7 +99,7 @@ right: 25px;
 }
 
 header {
-  background-color: #a30cb1;
+  background-color: #aa95ac;
   height: 100%;
   background-image: url("../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg");
   background-repeat: no-repeat;
@@ -127,7 +127,7 @@ header img:hover {
   transform: scale(1.2);
 }
 
-header a {
+/* header a {
   border: 1px, solid #a30cb1;
   border-radius: 29486px;
   color: #f7f4f5;
@@ -135,10 +135,10 @@ header a {
   text-decoration: none;
   font-size: 60px;
   text-transform: uppercase;
-  transform: rotate(360deg);
+  transform: rotate(360deg);*/
   /* transition-property: none 5ms ease-out; */
   /* transition-property: color, background; */
-}
+/*} */
 
 header a:hover {
   background-color: #fff;
