--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,7 +69,7 @@ footer{
   padding: 20px;
   text-align: left;
   height: auto;
-  width: 100vw;
+  /*width: 100vw;*/
   /*background-color: #06301c;*/
   background-image: linear-gradient(
     55deg, rgb(165, 221, 184) 0%, rgb(33, 241, 120) 70%);
@@ -124,7 +124,7 @@ right: 25px;
 }
 
 header {
-  background-color: #aa95ac;
+  background-color: #8bb499;
   height: 100%;
   background-image: url("../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg");
   background-repeat: no-repeat;
