--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ a {
 /* Pongo las noticas con imagen float a la izquierda, derecha o ninguno */
 .noticia{
     max-width: 80vw;
-    //margin:20px 20px 20px 20px;
+    /*margin:20px 20px 20px 20px;*/
     line-height: 1.5;
     /* margin-left: 1em;
     padding-left: 1em; */
@@ -397,7 +397,7 @@ ul.menu-desplegable a:hover {
 #grid {
  display: grid;
   height: auto;
- // grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+ /* grid-template: repeat(3, 1fr) / repeat(3, 1fr); */
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: auto;
    
