--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -113,7 +113,7 @@ right: 25px;
   z-index: 1; 
 }
 
-header a {
+/* header a {
   border: 1px, solid #a30cb1;
   border-radius: 29486px;
   color: #f7f4f5;
@@ -121,12 +121,97 @@ header a {
   text-decoration: none;
   font-size: 20px;
   text-transform: uppercase;
-  transform: rotate(360deg);*/
+  transform: rotate(360deg);
   /* transition-property: none 5ms ease-out; */
   /* transition-property: color, background; */
+/* } */
+
+/*header a:hover {
+  background-color: #fff;
+  color: #110101;
+}  */
+
+/* **************     header  **************      */
+header {
+    background-color: #a30cb1;
+    height: 100%;
+    background-image: url("../image/jonatan-pie-9P_VNWgeOxo-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 20px, 20px;
+    /* text-align: center; */
+    /* margin: 0;*/
+    /*padding: 0;*/
+    padding: 3em 5em;
+
+}
+
+header img {
+    display: inline-block;
+    vertical-align: top;
+    width: 200px;
+    border-radius: 50px 50px 70px 70px;
+    /* transition: transform 1s; */
+    transition: 0.3s ease;
+}
+
+header img:hover {
+    /* transform: rotate(360deg); */
+    transform: scale(1.2);
+}
+
+header a {
+    border: 1px, solid #a30cb1;
+    border-radius: 29486px;
+    color: #f7f4f5;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 60px;
+    text-transform: uppercase;
+    transform: rotate(360deg);
+    /* transition-property: none 5ms ease-out; */
+    /* transition-property: color, background; */
 }
 
 header a:hover {
-  background-color: #fff;
-  color: #110101;
-} 
+    background-color: #fff;
+    color: #110101;
+}
+
+/* Defino los estilos que se van a aplicar cuando el ancho de pantalla sea minimo 1000px */
+@media (min-width:1000px) {
+
+    /* escondo el icono hamburguesa y el checkbox */
+    nav input {
+        display: none;
+    }
+
+    nav label {
+        display: none;
+    }
+
+    /* muestro el nav completo */
+    ul.menu-desplegable {
+        display: flex;
+        gap: 40px;
+    }
+
+    a.menu-desplegable {
+        display: block;
+    }
+
+    /* redimensiono el logo */
+    a.menu-desplegable img {
+        width: 50px;
+        height: 50px;
+    }
+
+    /* añado la colocacion de los elementos del nav en horizontal */
+    nav {
+        padding: 10px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
