--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -142,8 +142,8 @@ header {
     padding: 20px, 20px;
     /* text-align: center; */
     /* margin: 0;*/
-    /*padding: 0;*/
-    padding: 3em 5em;
+    padding:top;
+    /* padding: 3em 5em; */
 
 }
 
