--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -116,7 +116,7 @@ footer{
   background-color: #b9b0b0;
   color: #0e0000;
   /* padding: 10px;  */
-  margin: 10px;
+  margin-top: 10px;
   text-align: left;
   height: auto;
   /* width: 100vw; */
