--- a/styles/galeria.css
+++ b/styles/galeria.css
@@ -175,6 +175,12 @@ ul.menu-desplegable a:hover {
   /* margin:0px 20px 0px 20px; */
   /* border-radius: 10%; */
 }
+.noticia__img--none {
+  max-width: 6vw;
+  float: left;
+  margin-right: 1em;
+
+}
 
 footer{
   border-top: 4px solid #09862e;
@@ -200,6 +206,28 @@ footer div img {
   border-radius: 50px 5px 70px 7px;
 }
 
+#botones {
+  display: flex;
+  flex-wrap: wrap;
+  /*salta linea*/
+  /* justify-content: space-between;
+  max-width: 80vw;
+  margin: auto; */
+
+}
+
+#indicador {
+  width: 15px;
+  height: 30px;
+  /* border-radius: 100%;
+  border: 1px solid rgb(146, 5, 34);*/
+  /* padding: 5px; */
+  /*background-color: #f2f5f7; */
+  position:relative;
+
+  bottom: 40px;
+  right: 40px;
+}
 #boton-arriba2 {
   width: 40px;
   height: 40px;
@@ -219,6 +247,9 @@ footer div img {
   height: 43px;
   z-index: 1;
 }
+
+
+ 
 
 
 /* @media only screen and (max-width: 990px) {
