--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,7 @@ p {
   font-family: "Roboto","SUSE", "Bungee Static", "oi";
 
 }
-/* Pongo las noticas con imagen float a la izquierda, derecha o ninguno */
+/* Pongo las noticias con imagen float a la izquierda, derecha o ninguno */
 .noticia{
     max-width: 80vw;
     /*margin:20px 20px 20px 20px;*/
@@ -423,6 +423,20 @@ ul.menu-desplegable a:hover {
     transition: all 0.3s ease-in-out; /*modifico como se hace la transicion de las propiedades de normal a hover. /propiedad/tiempo/modo/ */
 }
 
+/* Aside */
+
+div.aside { 
+    position:sticky;
+    width: 30%;
+    padding-left: 15px;
+    margin-left: 15px;
+    float: right;
+z-index: -10;
+    font-style: italic;
+    color: #d8d1d1;
+    background-color: rgb(81, 133, 79);
+}
+
 /* PANELES*/
 
 #paneles-content {
@@ -438,9 +452,7 @@ ul.menu-desplegable a:hover {
     display: none;
 }
 
-/*input[name=panel]{     damos tipos de elementos, otra forma de refernciarlos
-input[type="radio"]{
-}*/
+/* estilo del titulo del panel*/
 
 h2 {
   font-family: "SUSE","Roboto", "Bungee Static", "oi";
