--- a/styles/galeria.css
+++ b/styles/galeria.css
@@ -52,6 +52,12 @@ a {
   color: #a30cb1;
 }
 
+p {
+  line-height: 1.5;
+  font-family: "Roboto","SUSE", "Bungee Static", "oi";
+
+}
+
 /* posicion, fondo y linea inferior de nav */
 nav {
   position: sticky;
@@ -156,6 +162,30 @@ ul.menu-desplegable a:hover {
   color: white;
 }
 
+/*          galeria          */
+
+#grid {
+ display: grid;
+  height: auto;
+ /* grid-template: repeat(3, 1fr) / repeat(3, 1fr); */
+ grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: auto;
+    margin-bottom: 30px;
+   
+}
+
+#grid > div {
+  background-color: rgb(192, 233, 192);
+  text-align: center;
+  padding: 20px;
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 1);
+}
+#grid > :hover{
+    transform: scale(1.1); /* la imagen se amplia*/
+    filter: none; /* quito el filtro*/
+    transition: all 0.3s ease-in-out; /*modifico como se hace la transicion de las propiedades de normal a hover. /propiedad/tiempo/modo/ */
+}
+
 /* Pongo las noticas con imagen float a la izquierda, derecha o ninguno */
 .noticia {
   max-width: 80vw;
@@ -190,11 +220,21 @@ ul.menu-desplegable a:hover {
   /* border-radius: 10%; */
 }
 .noticia__img--none {
-  max-width: 6vw;
-  float: left;
-  margin-right: 1em;
+  /* display: block; */
+  /* max-width: 4vw; */
+  float:none;
+  /* margin: auto; */
+  max-width: 10%;
+  margin:5px 5px 0px 5px;
 
-}
+ }
+
+/* Pongo las notas de distancia y duración con estilos */
+informe {
+   width: 300px;
+  height: 100px;
+  border: 2px solid rgb(4, 104, 34);
+    }
 
 footer{
   border-top: 4px solid #09862e;
