--- a/styles/styles.css
+++ b/styles/styles.css
@@ -293,6 +293,15 @@ nav li a {
   color: rgb(26, 61, 177);
 }
 
+@keyframes pulse {
+  30% {
+    transform: scale(1.2);
+  }
+}
+#pulse {
+  animation: pulse ease-in 1400ms infinite alternate;
+}
+
 main {
   max-width: 80%;
   /*min-width:;*/
@@ -497,11 +506,12 @@ ul.menu-desplegable a:hover {
 div.aside { 
     position:sticky;
     width: 30%;
-    padding-left: 15px;
-    margin-left: 15px;
+    padding:10px;
+   margin: 20px;
     float: right;
-z-index: -10;
+    z-index: -10;
     font-style: italic;
+    font-size: 14px;
     color: #d8d1d1;
     background-color: rgb(81, 133, 79);
 }
